--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CLI to manage GitHub issues for LazyVim",
   "main": "src/index.js",
   "bin": {
-    "issue-lazyvim": "./src/index.js",
+    "issues-neovim": "./src/index.js",
     "gh-rate-limit": "./src/check-rate-limit.js"
   },
   "scripts": {
