feat: add email on package

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "issues",
     "lazyvim"
   ],
-  "author": "",
+  "author": "juninhopo <kelgaxd@gmail.com>",
   "license": "ISC",
   "type": "commonjs",
   "bugs": {
