--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "issues-cli",
+  "name": "issues-neovim",
   "version": "1.0.0",
-  "description": "CLI to manage GitHub issues for LazyVim",
+  "description": "Neovim plugin to manage GitHub issues",
   "main": "src/index.js",
   "bin": {
     "issues-neovim": "./src/index.js",
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/juninhopo/issues-cli.git"
+    "url": "git+https://github.com/juninhopo/issues-neovim.git"
   },
   "keywords": [
     "cli",
@@ -28,9 +28,9 @@
   "license": "ISC",
   "type": "commonjs",
   "bugs": {
-    "url": "https://github.com/juninhopo/issues-cli/issues"
+    "url": "https://github.com/juninhopo/issues-neovim/issues"
   },
-  "homepage": "https://github.com/juninhopo/issues-cli#readme",
+  "homepage": "https://github.com/juninhopo/issues-neovim#readme",
   "dependencies": {
     "blessed": "^0.1.81",
     "blessed-contrib": "^4.11.0",
